kubernetesdeployment/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api
spec:
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registryzqr0112.azurecr.io/poi/poi:0.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  selector:
    app: poi
  ports:
  - port: 80
    targetPort: 80
