kubernetesdeployment/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api
spec:
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryzqr0112.azurecr.io/trips/trips:0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
spec:
  selector:
    app: trips
  ports:
  - port: 80
    targetPort: 80
