kubernetesdeployment/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  namespace: web
spec:
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryzqr0112.azurecr.io/tripviewer/tripviewer:0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  type: LoadBalancer
  selector:
    app: tripviewer
  ports:
  - port: 80
    targetPort: 80
