kubernetesdeployment/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api
spec:
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryzqr0112.azurecr.io/user-java/user-java:0.1
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api
spec:
  selector:
    app: user-java
  ports:
  - port: 80
    targetPort: 80
