kubernetesdeployment/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
spec:
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryzqr0112.azurecr.io/userprofile/userprofile:0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  selector:
    app: userprofile
  ports:
  - port: 80
    targetPort: 80
